[package]
name = "gremlin_csv_importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
gremlin-client =  { version = "*", features = ["tokio-runtime"] }
tokio = { version = "1.14.0", features = ["full"] }
clap = "3.0.0-beta.5"
serde_yaml = "0.8.21"
tokio-stream = "0.1.14"
